# ChangeLog for app-text/linuxdoc-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/linuxdoc-tools/ChangeLog,v 1.21 2013/03/21 12:54:43 pinkbyte Exp $

*linuxdoc-tools-0.9.68-r1 (21 Mar 2013)

  21 Mar 2013; Sergey Popov <pinkbyte@gentoo.org>
  +linuxdoc-tools-0.9.68-r1.ebuild:
  Fix incorrect prefix path, that is saved in scripts at install phase, wrt bug
  #442482. Thanks to Manfred Knick for discovering this issue

  21 Mar 2013; Sergey Popov <pinkbyte@gentoo.org> linuxdoc-tools-0.9.68.ebuild:
  Move sed for setting proper sgml catalog path to src_prepare, fix tex-related
  files installation, wrt bug #442482

*linuxdoc-tools-0.9.68 (20 Mar 2013)

  20 Mar 2013; Sergey Popov <pinkbyte@gentoo.org>
  +linuxdoc-tools-0.9.68.ebuild, +files/linuxdoc-tools-0.9.68-compiler.patch,
  +files/linuxdoc-tools-0.9.68-letter.patch,
  +files/linuxdoc-tools-0.9.68-lex.patch:
  Version bump, wrt bug #287557. Fix building with new lex, wrt bug #442482

  16 Nov 2012; Ulrich Müller <ulm@gentoo.org>
  linuxdoc-tools-0.9.21_p11.ebuild:
  Update LICENSE, this is exactly the MIT/X11 license, only with different
  copyright holder.

  01 Aug 2010; Kacper Kowalik <xarthisius@gentoo.org>
  linuxdoc-tools-0.9.21_p11.ebuild,
  +files/linuxdoc-tools-0.9.21-ldflags.patch:
  Respect LDFLAGS wrt bug 287555

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  linuxdoc-tools-0.9.21_p11.ebuild:
  Add ~ia64 wrt #281056

  20 Apr 2009; Markus Meier <maekke@gentoo.org> linuxdoc-tools-0.9.21_p11:
  amd64 stable, bug #247555

  14 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  linuxdoc-tools-0.9.21_p11.ebuild:
  x86 stable wrt #247555

  11 Apr 2009; nixnut <nixnut@gentoo.org> linuxdoc-tools-0.9.21_p11.ebuild:
  ppc stable #247555

  02 Sep 2008; Christian Faulhammer <opfer@gentoo.org>
  linuxdoc-tools-0.9.21_p11.ebuild:
  rename USE=tetex to USE=latex for bug 196745

  02 Sep 2008; Christian Faulhammer <opfer@gentoo.org>