@@ -11,18 +11,17 @@ AUX linuxdoc-tools-0.9.68-lex.patch 271 SHA256 cb3d5728e643910fad510b2273027d01f
 DIST linuxdoc-tools_0.9.21-0.11.tar.gz 592246 SHA256 021324e1ca3940c2baff5c2cf872ddb1991207f39e170a9fe558ef2ffe35ac1c SHA512 b039c76d81556e6453c4181cea24bf15ec5a4f1780b3d48a72fde82e8f4d517cb8242f0f5151c6ff0d89ca911a4767bd9aa2da2b13b411e616d0cd628d51ac75 WHIRLPOOL 15b354b22cf5944c7f1ca5ca03f02b13de97a1d8223670548873a9308162794850b01a03233bb4b7ccf3e2a226afddfe9e3cb34495a5f130b1375bc2c5be6b8c
 DIST linuxdoc-tools_0.9.68.tar.gz 619242 SHA256 3b8611683d61480a60cdd2497132f15ca15fb583c9fe5543f6750d187a5dee67 SHA512 a78c662f4bf69b68530af0176fb6b35328c004a80cc73e7ed1151d46da3a7868e4a8a61094f8c4081a686f1ed0c58bd19c2c5ad5a2b6677ddc7c686e67a71df7 WHIRLPOOL 966e47e081bf5eb35de546f7cd0522396aba306d8afbeeba55afb91f360c196b196c3271b84ae8a98d7f9a4d0460558986a8a32a824940b0340236c705490676
 EBUILD linuxdoc-tools-0.9.21_p11.ebuild 2095 SHA256 1ab1c43467738193c070bfe332227132b428f013561dfb6d7b6d3a24a381593f SHA512 6c0d2013afa318938fd4c6869a7dc88a20e1ba626c6f9483c90bc386a469602d8ef12f4564a6a292b18acbff868aea959188ebaa94fbd437f7cfd2c551b3dbce WHIRLPOOL 0b9ab24c96f78b1c88be9e1a90c217079c4780fb1924169a2c8d1fe3271eadd6a6fe12d9eea13f9aa2a208da7f252c093b7edf11fb070d0e6d8900c405703f28
-EBUILD linuxdoc-tools-0.9.68-r1.ebuild 1852 SHA256 86a202a64bf94fc08fb1be28b5383887ce8fd7346ac6a3b893fcab8d94a1a42e SHA512 f93cf25d9451563793410115aa6b68133b64b5082351f8e99e9c8152b75588b177a82089eaf88d96cb2c24aa9ca99c97ad6b810e52dcfba8a78acadf11974a19 WHIRLPOOL 7044aa481f49f8f0f84e2b93609f91116f0204d22d55ddb9d1975dd84ac0e88517181a5599d2a3b389a035a37388afc3d0bdd2c59d3ef4ab5add7afa53e37183
-EBUILD linuxdoc-tools-0.9.68.ebuild 1949 SHA256 ee739cd8f73e838266e701b3c43079f86effd1b1ecc766e2e59fb057428d2dd5 SHA512 3b64cc7706b22a74a1ed380184f588a996e253b9f93b9dbcf30ca1469a88e4b865cbb2f4fb4442dfad5759144d74cd237831d3eb370f17cd4770a32a6ee0c34f WHIRLPOOL 5840952cf24de94aa5c4fcb5ee678ad0271bf30e28e478d8cf9aa948443fa888f2298402bca9987b8f23d21217d172b28a29a65ee11c45312cc0e7ecd038aba6
-MISC ChangeLog 3914 SHA256 588ff0acd8fc4f0f7a1e19bd4d8e3a421dc7137c6ca108fe940f02fc288cb433 SHA512 7c63a7e6aeeaeba74ec9952b53e15d6c10fd4c7207cbf84098f981b41c619941fa678e848aa027ce2921361bbb6bca9a0e957ad12c43afc910fb1b4ea227d648 WHIRLPOOL 49779ce731ec994ba4444b722ec9e612088e23f599ca4ed75834a6213cad74bc40803779bd2aac0fa3e269f94716d4230e6bbb8bc40fd4f0bd89324e2d52ef5c
+EBUILD linuxdoc-tools-0.9.68-r1.ebuild 1987 SHA256 4c8ccdf37a544f102076f01bb73479c23d419275fa4917e3d083ef6ed01b1758 SHA512 3d3e3576ab8d2f2da457cc5f66f6dc2778f9d1d4335c680b8a0beec5205406572701ab3382bbe0728c56e29804cb9106b0fd66dcea052768aa5373512caadd06 WHIRLPOOL 6dd8adcab3203c95bc6fccce88499053bb2c05febf84caa422a374daa43a17434939c94ee423efb810099c3adce3918cec3e1a26231d6203c236ead649ed4224
+MISC ChangeLog 4138 SHA256 921bd16b44b50b5cb6ea6eca3dbd5cf8638ea278fe50537c14bf6c790443c4f9 SHA512 afae316bda79921f5b7e0ba19f97d5165ad3c56f8417d1ec6c180c7f190d420b1103d7f58cf5ee27d55caf5aee5e71752a41908f3ed784abe1865452e485fbe9 WHIRLPOOL a3bd872943299119c4a2bce3eb5236c50511bba61e6e2e6bc3dfd7383f0425348078cd87f4ae7a61e1ffe163c982564457eb656695e2fe59306ba023b051d83a
 MISC metadata.xml 641 SHA256 5129c9100b7958babe2481818497efcd9dc01828334b5d69d3301c5b3946ffc3 SHA512 ca7b0fa067f15c378beda603aca118b34831564c3464463236d8f7f66696e20627ac4a4895f1df7b67daa5e481cc8d442f992872a9e8af6c451f4ce88cce5d9d WHIRLPOOL 8ef2a7580c1cc9330aa3f7dfa060a57fc545841e5d3e518ebeb1f51af5783a3fcdd992f94dba7297e61478ab9119039b523b301dda5574d0ea640ef960f3ad21
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRSwMSAAoJECo/aRed9267u0MH/0WddIgUvQCpNLQVFk6AIRmT
-fVOGUGRYABzWxbY6eL32axIn1fhr1GUMJhhP3bpU+n9VPjpEphic/jCzZkDgtSm/
-LizczqgkijKP2o/OQCVhbBcEKBc1Wy47/Vg0d0McXEdLd8/Bgg8+OtsLXlWGuxhz
-evbk8iB/P6ZZ4UE3Xf6+b6+1/nX10hUe6q/DqZ9uhv4TJdLMCBqj+MW4bZJ9QQBE
-soSzIPtAd9mr0EhWkv2BT5JK27Buqfu9CoKgAvBoNuJqf7Pe80dQDihQCwbuBXQn
-mjFi/tjLbifRhZp5q5FTZWihcjxsyJFZLzsXukJyuiZBUvW9cboRgaF2aNYw7sQ=
-=hqXo
+iQEcBAEBCAAGBQJRTAKBAAoJECo/aRed9267ck8H/RkodUSepWzIITdBOnj//8B/
+/BikOs3chnuT4j855yI088BP6aaHBiAEKCJb0d2LCTbgyDV9lCJBj5dm787Khak1
++f1ulfhUNAFyG8t87350sxTBbGyRfdFkzgmckW01ET6uJug2rZwshsC5pLwZWU1B
+zqM5bWuc1/tSMJmXv10R7qEcPAj8A/EEhEMqCZhgKgl50UkAjaMyg3Hq9SMZeD5P
+zzMmpsxHiyTSUP2Npy9ynSLIS0IDM+0ARWtlkAEUb+1sz0vLhWxLj0Hqj0GnBI4T
+eHmN7aXQ6j+Re8U9E1Yh1IjhYiZyfq3Pgh+B7077GSGw3PVPlB6LSi1CFrlvFy4=
+=enq+
 -----END PGP SIGNATURE-----
