@@ -1,6 +1,11 @@
 # ChangeLog for app-text/linuxdoc-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/linuxdoc-tools/ChangeLog,v 1.21 2013/03/21 12:54:43 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/linuxdoc-tools/ChangeLog,v 1.22 2013/03/22 07:04:38 pinkbyte Exp $
+
+  22 Mar 2013; Sergey Popov <pinkbyte@gentoo.org>
+  -linuxdoc-tools-0.9.68.ebuild, linuxdoc-tools-0.9.68-r1.ebuild:
+  Fix incorrect version string in upstream tarball, wrt bug #442482, add
+  epatch_user. Drop broken ebuild
 
 *linuxdoc-tools-0.9.68-r1 (21 Mar 2013)
 
